--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -1,1 +1,15 @@
-header Header 
+header.header 
+    .container 
+        .row.align-items-center 
+            .col-3 
+                .inner-logo 
+                    a(href="/")
+                        img(src="/images/NgocHoaii.jpg", alt="Logo", height=200)
+            .col-9 
+                .inner-menu 
+                    ul 
+                        li 
+                            a(href="/") Trang chủ
+                        li 
+                            a(href="/products") Sản phẩm
+                        
