--- a/Views/admin/layouts/default.pug
+++ b/Views/admin/layouts/default.pug
@@ -17,4 +17,4 @@ html
         
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
-        script(src="/js/script.js") 
+        script(src="/admin/js/script.js") 
