--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1,11 +1,6 @@
-.header {
-    background: #202020;
-    padding: 10px 0;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+html a{
+    text-decoration: none;
 }
-
 .header .inner-logo a {
     font-size: 24px;
     font-weight: 700;
