done search admin

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1,6 +1,11 @@
 html a{
     text-decoration: none;
 }
+
+.header {
+    background: #323232;
+    height: 72px;
+}
 .header .inner-logo a {
     font-size: 24px;
     font-weight: 700;
