--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -1,4 +1,6 @@
 extends ../../layouts/default.pug
+include ../../mixins/filterStatus.pug
+include ../../mixins/searchForm.pug
 
 block main 
     h1 Products
@@ -8,26 +10,9 @@ block main
         .card-body 
             .row
                 .col-6
-                    each item in filterStatus
-                        button(
-                            class= `btn btn-sm ml-1 btn-outline-success ${item.class}`
-                            button-status= `${item.status}`
-                        ) #{item.name}
+                    +filter-status(filterStatus)
                 .col-6
-                    form(id = "form-search")
-                        .input-group 
-                            input(
-                                type='text'
-                                placeholder="Nhập từ khóa"
-                                name="keyword"
-                                class="form-control"
-                                value=`${searchKey}`
-                            )
-                            .input-group-append
-                                button(
-                                    class="btn btn-success"
-                                    type="submit"
-                                ) Tìm
+                    +search-form(searchKey)
 
     .card.mb-3 
         .card-header Danh sách sản phẩm 
