--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/filterStatus.pug
 include ../../mixins/searchForm.pug
+include ../../mixins/pagination.pug
 
 block main 
     h1 Products
@@ -50,4 +51,4 @@ block main
                                         button(class="btn btn-warning btn-sm") Sửa
                                         button(class="btn btn-danger btn-sm ml-1") Xóa
 
-
+    +pagination(pagination)
