--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ../../layouts/default.pug
 include ../../mixins/filterStatus.pug
 include ../../mixins/searchForm.pug
 include ../../mixins/pagination.pug
+include ../../mixins/formChangeMulti.pug
 
 block main 
     h1 Products
@@ -18,50 +19,62 @@ block main
     .card.mb-3 
         .card-header Danh sách sản phẩm 
             .card-body 
-                    table.table.table-hover.table-sm 
-                        thead 
-                            tr
-                                th STT 
-                                th Image 
-                                th Title 
-                                th Price 
-                                th Status 
-                                th Action 
-                        
-                        tbody 
+                +formChangeMulti(`${prefixAdmin}/products/change-multi?_method=PATCH`)
 
-                            each item, index in data
-                                tr 
-                                    td #{index + 1}
-                                    td 
-                                        img(
-                                            src=item.thumbnail,
-                                            alt=`Sản phẩm ${index + 1}`,
-                                            width="100px",
-                                            height="auto"
-                                        )
-                                    td #{item.title} 
-                                    td #{item.price}
-                                    td 
-                                        if (item.status == 'active')
-                                            a(
-                                                href='javascript:;' 
-                                                data-status=item.status
-                                                data-id=item.id
-                                                button-change-status
-                                                class="badge bg-success"
-                                            ) Hoạt động
-                                        else 
-                                            a(
-                                                href='javascript:;'                                                  
-                                                data-status=item.status
-                                                data-id = item.id
-                                                button-change-status
-                                                class="badge bg-danger"
-                                            ) Dừng hoạt động
-                                    td 
-                                        button(class="btn btn-warning btn-sm") Sửa
-                                        button(class="btn btn-danger btn-sm ml-1") Xóa
+                table(
+                    class="table table-hover table-sm"
+                    checkbox-multi
+                )
+                    thead 
+                        tr  
+                            th 
+                                input(type="checkbox" name="checkall")
+                            th STT 
+                            th Image 
+                            th Title 
+                            th Price 
+                            th Status 
+                            th Action 
+                    tbody 
+
+                        each item, index in data
+                            tr  
+                                td 
+                                    input(
+                                        type="checkbox"
+                                        name="id"
+                                        value=item.id
+                                    )
+                                td #{index + 1}
+                                td 
+                                    img(
+                                        src=item.thumbnail,
+                                        alt=`Sản phẩm ${index + 1}`,
+                                        width="100px",
+                                        height="auto"
+                                    )
+                                td #{item.title} 
+                                td #{item.price}
+                                td 
+                                    if (item.status == 'active')
+                                        a(
+                                            href='javascript:;' 
+                                            data-status=item.status
+                                            data-id=item.id
+                                            button-change-status
+                                            class="badge bg-success"
+                                        ) Hoạt động
+                                    else 
+                                        a(
+                                            href='javascript:;'                                                  
+                                            data-status=item.status
+                                            data-id = item.id
+                                            button-change-status
+                                            class="badge bg-danger"
+                                        ) Dừng hoạt động
+                                td 
+                                    button(class="btn btn-warning btn-sm") Sửa
+                                    button(class="btn btn-danger btn-sm ml-1") Xóa
 
     +pagination(pagination)
 
