--- a/Views/admin/mixins/formChangeMulti.pug
+++ b/Views/admin/mixins/formChangeMulti.pug
@@ -9,6 +9,7 @@ mixin formChangeMulti(action)
                 select(name="type", class='form-control')
                     option(value='active') Hoạt động
                     option(value='inactive') Dừng hoạt động
+                    option(value='delete-all') Xóa tất cả
             .form-group.d-none
                 input(
                     type="text"
