feat: change position item

--- a/Views/admin/mixins/formChangeMulti.pug
+++ b/Views/admin/mixins/formChangeMulti.pug
@@ -10,6 +10,7 @@ mixin formChangeMulti(action)
                     option(value='active') Hoạt động
                     option(value='inactive') Dừng hoạt động
                     option(value='delete-all') Xóa tất cả
+                    option(value='change-position') Đổi vị trí
             .form-group.d-none
                 input(
                     type="text"
