--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -3,8 +3,11 @@ include ../../mixins/filterStatus.pug
 include ../../mixins/searchForm.pug
 include ../../mixins/pagination.pug
 include ../../mixins/formChangeMulti.pug
+include ../../mixins/alert.pug
 
 block main 
+    +alert-success(3000)
+
     h1 Products
 
     .card.mb-3 
