--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -41,3 +41,38 @@ html a{
     padding: 6px 10px;
     border-bottom: 1px solid #515151;
 }
+
+[show-alert] {
+    position: fixed;
+    top: 80px;
+    right: 15px;
+    z-index: 5;
+}
+
+[show-alert].alert-hidden {
+    animation-name: alert-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
+@keyframes alert-hidden {
+    from {
+        right: 15px
+    }
+    to {
+        right: -100%;
+        display: none;
+    }
+}
+
+[show-alert] [close-alert] {
+    background: #ffffffc4;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 20px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 50%;
+    cursor: pointer;
+}
