--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -8,6 +8,8 @@ include ../../mixins/alert.pug
 block main 
     +alert-success(3000)
 
+    +alert-error(3000)
+
     h1 Products
 
     .card.mb-3 
@@ -92,7 +94,10 @@ block main
                                             class="badge bg-danger"
                                         ) Dừng hoạt động
                                 td 
-                                    button(class="btn btn-warning btn-sm") Sửa
+                                    a(
+                                        href=`${prefixAdmin}/products/edit/${item.id}`
+                                        class="btn btn-warning btn-sm"
+                                    ) Sửa
                                     button(
                                         class="btn btn-danger btn-sm ml-1"
                                         button-delete
