--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -76,3 +76,16 @@ html a{
     border-radius: 50%;
     cursor: pointer;
 }
+
+.image-preview {
+    width: 150px;
+    height: auto;
+    margin-top: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.image-preview[src=""] {
+    display: none;
+}
