--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -93,7 +93,11 @@ block main
                                             button-change-status
                                             class="badge bg-danger"
                                         ) Dừng hoạt động
-                                td 
+                                td  
+                                    a(
+                                        href=`${prefixAdmin}/products/detail/${item.id}`
+                                        class="btn btn-secondary btn-sm"
+                                    ) Chi tiết
                                     a(
                                         href=`${prefixAdmin}/products/edit/${item.id}`
                                         class="btn btn-warning btn-sm"
