--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -4,6 +4,7 @@ include ../../mixins/searchForm.pug
 include ../../mixins/pagination.pug
 include ../../mixins/formChangeMulti.pug
 include ../../mixins/alert.pug
+include ../../mixins/sort.pug
 
 block main 
     +alert-success(3000)
@@ -21,92 +22,94 @@ block main
                 .col-6
                     +search-form(searchKey)
 
+    +sort()
+
     .card.mb-3 
         .card-header Danh sách sản phẩm 
-            .card-body 
-                .row 
-                    .col-8 
-                        +formChangeMulti(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-                    .col-4 
-                        a(
-                            href=`${prefixAdmin}/products/create`
-                            class="btn btn-outline-success"
-                        ) + Thêm mới
-                    
-                table(
-                    class="table table-hover table-sm"
-                    checkbox-multi
-                )
-                    thead 
-                        tr  
-                            th 
-                                input(type="checkbox" name="checkall")
-                            th STT 
-                            th Image 
-                            th Title 
-                            th Price 
-                            th Position
-                            th Status 
-                            th Action 
-                    tbody 
+        .card-body 
+            .row 
+                .col-8 
+                    +formChangeMulti(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+                .col-4 
+                    a(
+                        href=`${prefixAdmin}/products/create`
+                        class="btn btn-outline-success"
+                    ) + Thêm mới
 
-                        each item, index in data
-                            tr  
-                                td 
-                                    input(
-                                        type="checkbox"
-                                        name="id"
-                                        value=item.id
-                                    )
-                                td #{index + 1}
-                                td 
-                                    img(
-                                        src=item.thumbnail,
-                                        alt=`Sản phẩm ${index + 1}`,
-                                        width="100px",
-                                        height="auto"
-                                    )
-                                td #{item.title} 
-                                td #{item.price}
-                                td 
-                                    input(
-                                        type="number"
-                                        value=item.position 
-                                        style="width: 60px"
-                                        min="1"
-                                        name="position"
-                                    )
-                                td 
-                                    if (item.status == 'active')
-                                        a(
-                                            href='javascript:;' 
-                                            data-status=item.status
-                                            data-id=item.id
-                                            button-change-status
-                                            class="badge bg-success"
-                                        ) Hoạt động
-                                    else 
-                                        a(
-                                            href='javascript:;'                                                  
-                                            data-status=item.status
-                                            data-id = item.id
-                                            button-change-status
-                                            class="badge bg-danger"
-                                        ) Dừng hoạt động
-                                td  
+            table(
+                class="table table-hover table-sm"
+                checkbox-multi
+            )
+                thead 
+                    tr  
+                        th 
+                            input(type="checkbox" name="checkall")
+                        th STT 
+                        th Image 
+                        th Title 
+                        th Price 
+                        th Position
+                        th Status 
+                        th Action 
+                tbody 
+
+                    each item, index in data
+                        tr  
+                            td 
+                                input(
+                                    type="checkbox"
+                                    name="id"
+                                    value=item.id
+                                )
+                            td #{index + 1}
+                            td 
+                                img(
+                                    src=item.thumbnail,
+                                    alt=`Sản phẩm ${index + 1}`,
+                                    width="100px",
+                                    height="auto"
+                                )
+                            td #{item.title} 
+                            td #{item.price}
+                            td 
+                                input(
+                                    type="number"
+                                    value=item.position 
+                                    style="width: 60px"
+                                    min="1"
+                                    name="position"
+                                )
+                            td 
+                                if (item.status == 'active')
                                     a(
-                                        href=`${prefixAdmin}/products/detail/${item.id}`
-                                        class="btn btn-secondary btn-sm"
-                                    ) Chi tiết
-                                    a(
-                                        href=`${prefixAdmin}/products/edit/${item.id}`
-                                        class="btn btn-warning btn-sm"
-                                    ) Sửa
-                                    button(
-                                        class="btn btn-danger btn-sm ml-1"
-                                        button-delete
+                                        href='javascript:;' 
+                                        data-status=item.status
                                         data-id=item.id
-                                    ) Xóa
+                                        button-change-status
+                                        class="badge bg-success"
+                                    ) Hoạt động
+                                else 
+                                    a(
+                                        href='javascript:;'                                                  
+                                        data-status=item.status
+                                        data-id = item.id
+                                        button-change-status
+                                        class="badge bg-danger"
+                                    ) Dừng hoạt động
+                            td  
+                                a(
+                                    href=`${prefixAdmin}/products/detail/${item.id}`
+                                    class="btn btn-secondary btn-sm"
+                                ) Chi tiết
+                                a(
+                                    href=`${prefixAdmin}/products/edit/${item.id}`
+                                    class="btn btn-warning btn-sm"
+                                ) Sửa
+                                button(
+                                    class="btn btn-danger btn-sm ml-1"
+                                    button-delete
+                                    data-id=item.id
+                                ) Xóa
 
     +pagination(pagination)
 
