--- a/Views/admin/partials/sider.pug
+++ b/Views/admin/partials/sider.pug
@@ -6,4 +6,6 @@
             li 
                 a(href=`${prefixAdmin}/dashboard`) Dashboard 
             li 
+                a(href=`${prefixAdmin}/categories`) Categories
+            li 
                 a(href=`${prefixAdmin}/products`) Products
