--- a/Views/admin/pages/categories/index.pug
+++ b/Views/admin/pages/categories/index.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug
+include ../../mixins/selectTree.pug
 
 
 block main 
@@ -31,63 +32,7 @@ block main
                         th Status 
                         th Action 
                 tbody 
-
-                    each item, index in categories
-                        tr  
-                            td 
-                                input(
-                                    type="checkbox"
-                                    name="id"
-                                    value=item.id
-                                )
-                            td #{index + 1}
-                            td 
-                                img(
-                                    src=item.thumbnail,
-                                    alt=`Danh mục ${index + 1}`,
-                                    width="100px",
-                                    height="auto"
-                                )
-                            td #{item.title} 
-                            td 
-                                input(
-                                    type="number"
-                                    value=item.position 
-                                    style="width: 60px"
-                                    min="1"
-                                    name="position"
-                                )
-                            td 
-                                if (item.status == 'active')
-                                    a(
-                                        href='javascript:;' 
-                                        data-status=item.status
-                                        data-id=item.id
-                                        button-change-status
-                                        class="badge bg-success"
-                                    ) Hoạt động
-                                else 
-                                    a(
-                                        href='javascript:;'                                                  
-                                        data-status=item.status
-                                        data-id = item.id
-                                        button-change-status
-                                        class="badge bg-danger"
-                                    ) Dừng hoạt động
-                            td  
-                                a(
-                                    href=`${prefixAdmin}/categories/detail/${item.id}`
-                                    class="btn btn-secondary btn-sm"
-                                ) Chi tiết
-                                a(
-                                    href=`${prefixAdmin}/categories/edit/${item.id}`
-                                    class="btn btn-warning btn-sm"
-                                ) Sửa
-                                button(
-                                    class="btn btn-danger btn-sm ml-1"
-                                    button-delete
-                                    data-id=item.id
-                                ) Xóa
+                    +table-tree(categories)
 
 
 
