--- a/Views/admin/pages/products/create.pug
+++ b/Views/admin/pages/products/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/selectTree.pug
 
 block main 
     +alert-error(3000)
@@ -21,8 +22,18 @@ block main
                 name="title"
                 required 
             )
+        div.form-group
+            label(for='category_id') Danh mục
+            select(
+                name="category_id"
+                id="category_id"
+                class='form-control'
+            )
+                option(value="") -- Chọn danh mục --
+                if (categories) 
+                    +select-tree(categories)
         div(class="form-group")
-            label(for="desc") Tiêu đề
+            label(for="desc") Mô tả
             textarea(
                 class="form-control"
                 id="desc"
