--- a/Views/admin/pages/products/edit.pug
+++ b/Views/admin/pages/products/edit.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/selectTree.pug
 
 block main 
     +alert-error(3000)
@@ -22,6 +23,16 @@ block main
                 value=item.title
                 required 
             )
+        div.form-group
+            label(for='category_id') Danh mục
+            select(
+                name="category_id"
+                id="category_id"
+                class='form-control'
+            )
+                option(value="") -- Chọn danh mục --
+                if (categories) 
+                    +select-tree(categories, 1, item.category_id)
         div(class="form-group")
             label(for="desc") Mô tả
             textarea(
