--- a/Views/admin/partials/sider.pug
+++ b/Views/admin/partials/sider.pug
@@ -9,3 +9,5 @@
                 a(href=`${prefixAdmin}/categories`) Categories
             li 
                 a(href=`${prefixAdmin}/products`) Products
+            li 
+                a(href=`${prefixAdmin}/roles`) Permissions
