--- a/Views/admin/pages/roles/index.pug
+++ b/Views/admin/pages/roles/index.pug
@@ -2,7 +2,7 @@ extends ../../layouts/default.pug
 
 
 block main 
-    h1.mb-4 Permissions
+    h1.mb-4 #{titlePage}
 
     .card-header Danh sách
     .card-body 
