--- a/Views/admin/partials/sider.pug
+++ b/Views/admin/partials/sider.pug
@@ -10,4 +10,6 @@
             li 
                 a(href=`${prefixAdmin}/products`) Products
             li 
-                a(href=`${prefixAdmin}/roles`) Permissions
+                a(href=`${prefixAdmin}/roles`) Role
+            li 
+                a(href=`${prefixAdmin}/roles/permissions`) Permissions
