--- a/Views/admin/layouts/default.pug
+++ b/Views/admin/layouts/default.pug
@@ -5,19 +5,21 @@ html
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="/admin/css/style.css")
     body 
-        include ../partials/header.pug
+        if (role.permissions.length > 0)
+            include ../partials/header.pug
 
-        .body 
+            .body 
 
-            include ../partials/sider.pug
+                include ../partials/sider.pug
 
-            .main 
-                block main
+                .main 
+                    block main
 
-        
+            script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
+            script(src="/tinymce/tinymce.min.js") 
+            script(src="/admin/js/tinymce-config.js") 
+            script(src="/admin/js/script.js") 
 
-        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
-        script(src="/tinymce/tinymce.min.js") 
-        script(src="/admin/js/tinymce-config.js") 
-        script(src="/admin/js/script.js") 
-
+        else 
+            h1 Bạn không có quyền truy cập
+            <a href="javascript:history.back()">Go Back</a>
