--- a/Views/admin/mixins/selectTree.pug
+++ b/Views/admin/mixins/selectTree.pug
@@ -35,37 +35,40 @@ mixin table-tree(categories, level = 1)
                     min="1"
                     name="position"
                 )
-            td 
-                if (item.status == 'active')
-                    a(
-                        href='javascript:;' 
-                        data-status=item.status
-                        data-id=item.id
-                        button-change-status
-                        class="badge bg-success"
-                    ) Hoạt động
-                else 
-                    a(
-                        href='javascript:;'                                                  
-                        data-status=item.status
-                        data-id = item.id
-                        button-change-status
-                        class="badge bg-danger"
-                    ) Dừng hoạt động
+            td  
+                if (role.permissions.includes('categories_edit'))
+                    if (item.status == 'active')
+                        a(
+                            href='javascript:;' 
+                            data-status=item.status
+                            data-id=item.id
+                            button-change-status
+                            class="badge bg-success"
+                        ) Hoạt động
+                    else 
+                        a(
+                            href='javascript:;'                                                  
+                            data-status=item.status
+                            data-id = item.id
+                            button-change-status
+                            class="badge bg-danger"
+                        ) Dừng hoạt động
             td  
                 a(
                     href=`${prefixAdmin}/categories/detail/${item.id}`
                     class="btn btn-secondary btn-sm"
                 ) Chi tiết
-                a(
-                    href=`${prefixAdmin}/categories/edit/${item.id}`
-                    class="btn btn-warning btn-sm"
-                ) Sửa
-                button(
-                    class="btn btn-danger btn-sm ml-1"
-                    button-delete
-                    data-id=item.id
-                ) Xóa
+                if (role.permissions.includes('categories_edit'))
+                    a(
+                        href=`${prefixAdmin}/categories/edit/${item.id}`
+                        class="btn btn-warning btn-sm"
+                    ) Sửa
+                if (role.permissions.includes('categories_delete'))
+                    button(
+                        class="btn btn-danger btn-sm ml-1"
+                        button-delete
+                        data-id=item.id
+                    ) Xóa
 
         if (item.children && item.children.length > 0)
             +table-tree(item.children, level + 1)
