--- a/Views/admin/pages/accounts/edit.pug
+++ b/Views/admin/pages/accounts/edit.pug
@@ -2,113 +2,115 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 
 block main 
-    +alert-success(3000)
-    +alert-error(3000)
+    if (role.permissions.includes('accounts_edit'))
 
-    h1.mb-4 #{titlePage}
+        +alert-success(3000)
+        +alert-error(3000)
+
+        h1.mb-4 #{titlePage}
 
 
-    if (roles)
-        form(
-            action = `${prefixAdmin}/accounts/edit/${record.id}?_method=PATCH`
-            method='POST'
-            enctype='multipart/form-data'
-        )
-            .form-group 
-                label(for='title') Họ tên
-                input(
-                    type='text'
-                    class='form-control'
-                    id='fullName'
-                    name='fullName'
-                    value=record.fullName
-                    required
-                )
-            .form-group 
-                label(for='title') Email
-                input(
-                    type='text'
-                    class='form-control'
-                    id='email'
-                    name='email'
-                    value=record.email
-                    required
-                )
-            .form-group 
-                label(for='title') Password
-                input(
-                    type='password'
-                    class='form-control'
-                    id='password'
-                    name='password'
-                )
-            .form-group 
-                label(for='title') Phone number
-                input(
-                    type='text'
-                    class='form-control'
-                    id='phone'
-                    name='phone'
-                    value=record.phone
-                    required
-                )
-            div(
-                class="form-group"
-                upload-image
+        if (roles)
+            form(
+                action = `${prefixAdmin}/accounts/edit/${record.id}?_method=PATCH`
+                method='POST'
+                enctype='multipart/form-data'
             )
-                label(for="avatar") Ảnh
-                input(
-                    type="file"
-                    class="form-control-file"
-                    id="avatar"
-                    name="avatar"
-                    accept="image/*"
-                    upload-image-input
+                .form-group 
+                    label(for='title') Họ tên
+                    input(
+                        type='text'
+                        class='form-control'
+                        id='fullName'
+                        name='fullName'
+                        value=record.fullName
+                        required
+                    )
+                .form-group 
+                    label(for='title') Email
+                    input(
+                        type='text'
+                        class='form-control'
+                        id='email'
+                        name='email'
+                        value=record.email
+                        required
+                    )
+                .form-group 
+                    label(for='title') Password
+                    input(
+                        type='password'
+                        class='form-control'
+                        id='password'
+                        name='password'
+                    )
+                .form-group 
+                    label(for='title') Phone number
+                    input(
+                        type='text'
+                        class='form-control'
+                        id='phone'
+                        name='phone'
+                        value=record.phone
+                        required
+                    )
+                div(
+                    class="form-group"
+                    upload-image
                 )
-                img(
-                    src=record.avatar
-                    upload-image-preview
-                    class="image-preview"
+                    label(for="avatar") Ảnh
+                    input(
+                        type="file"
+                        class="form-control-file"
+                        id="avatar"
+                        name="avatar"
+                        accept="image/*"
+                        upload-image-input
+                    )
+                    img(
+                        src=record.avatar
+                        upload-image-preview
+                        class="image-preview"
+                    )
+                .form-group
+                    label(for='role') Role
+                    select(
+                        name="role"
+                        id="role"
+                        class='form-control'
+                    )
+                        option(disabled) -- Phân quyền --
+                        each item in roles
+                            option(
+                                value=item.id
+                                selected=(item.id == record.role_id ? true : false)
+                            ) #{item.title}
+                div(
+                    class="form-group form-check form-check-inline"
                 )
-            .form-group
-                label(for='role') Role
-                select(
-                    name="role"
-                    id="role"
-                    class='form-control'
+                    input(
+                        type="radio"
+                        class="form-check-input"
+                        id="statusActive"
+                        name="status"
+                        value="active"
+                        checked = (record.status == 'active') ? true : false
+                    )
+                    label(for="statusInActive" class="form-check-label") Hoạt động
+                div(
+                    class="form-group form-check form-check-inline"
                 )
-                    option(disabled) -- Phân quyền --
-                    each item in roles
-                        option(
-                            value=item.id
-                            selected=(item.id == record.role_id ? true : false)
-                        ) #{item.title}
-            div(
-                class="form-group form-check form-check-inline"
-            )
-                input(
-                    type="radio"
-                    class="form-check-input"
-                    id="statusActive"
-                    name="status"
-                    value="active"
-                    checked = (record.status == 'active') ? true : false
-                )
-                label(for="statusInActive" class="form-check-label") Hoạt động
-            div(
-                class="form-group form-check form-check-inline"
-            )
-                input(
-                    type="radio"
-                    class="form-check-input"
-                    id="statusInActive"
-                    name="status"
-                    value="inactive"
-                    checked = (record.status == 'inactive') ? true : false
-                )
-                label(for="statusInActive" class="form-check-label") Dừng hoạt động
-            div(class="form-group")
-                button(
-                    type="submit"
-                    class="btn btn-primary"
-                ) Cập nhật
+                    input(
+                        type="radio"
+                        class="form-check-input"
+                        id="statusInActive"
+                        name="status"
+                        value="inactive"
+                        checked = (record.status == 'inactive') ? true : false
+                    )
+                    label(for="statusInActive" class="form-check-label") Dừng hoạt động
+                div(class="form-group")
+                    button(
+                        type="submit"
+                        class="btn btn-primary"
+                    ) Cập nhật
