--- a/Views/admin/pages/accounts/index.pug
+++ b/Views/admin/pages/accounts/index.pug
@@ -1,74 +1,76 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1.mb-4 #{titlePage}
+    if (role.permissions.includes('accounts_view'))
 
-    .card.mb-3 
-        .card-header Danh sách 
-        .card-body 
-            .row 
-                .col-8
-                .col-4.text-right 
-                    a(
-                        href=`${prefixAdmin}/accounts/create`
-                        class='btn btn-outline-success'
-                    ) + Thêm mới
+        h1.mb-4 #{titlePage}
 
-            table(
-                class="table table-hover table-sm"
-            )
-                thead 
-                    tr  
-                        th STT 
-                        th Avatar
-                        th Họ tên
-                        th Phân quyền
-                        th Email
-                        th Trạng thái 
-                        th Action 
-                tbody 
+        .card.mb-3 
+            .card-header Danh sách 
+            .card-body 
+                .row 
+                    .col-8
+                    .col-4.text-right 
+                        a(
+                            href=`${prefixAdmin}/accounts/create`
+                            class='btn btn-outline-success'
+                        ) + Thêm mới
 
-                    each item, index in records
+                table(
+                    class="table table-hover table-sm"
+                )
+                    thead 
                         tr  
-                            td #{index + 1}
-                            td 
-                                img(
-                                    src=item.avatar,
-                                    alt=`Avatar`,
-                                    width="100px",
-                                    height="auto"
-                                )
-                            td #{item.fullName} 
-                            td #{item.role}
-                            td #{item.email}
-                            td 
-                                if (item.status == 'active')
+                            th STT 
+                            th Avatar
+                            th Họ tên
+                            th Phân quyền
+                            th Email
+                            th Trạng thái 
+                            th Action 
+                    tbody 
+
+                        each item, index in records
+                            tr  
+                                td #{index + 1}
+                                td 
+                                    img(
+                                        src=item.avatar,
+                                        alt=`Avatar`,
+                                        width="100px",
+                                        height="auto"
+                                    )
+                                td #{item.fullName} 
+                                td #{item.role}
+                                td #{item.email}
+                                td 
+                                    if (item.status == 'active')
+                                        a(
+                                            href='javascript:;' 
+                                            data-status=item.status
+                                            data-id=item.id
+                                            button-change-status
+                                            class="badge bg-success"
+                                        ) Hoạt động
+                                    else 
+                                        a(
+                                            href='javascript:;'                                                  
+                                            data-status=item.status
+                                            data-id = item.id
+                                            button-change-status
+                                            class="badge bg-danger"
+                                        ) Dừng hoạt động
+                                td  
                                     a(
-                                        href='javascript:;' 
-                                        data-status=item.status
+                                        href=`${prefixAdmin}/accounts/detail/${item.id}`
+                                        class="btn btn-secondary btn-sm"
+                                    ) Chi tiết
+                                    a(
+                                        href=`${prefixAdmin}/accounts/edit/${item.id}`
+                                        class="btn btn-warning btn-sm"
+                                    ) Sửa
+                                    button(
+                                        class="btn btn-danger btn-sm ml-1"
+                                        button-delete
                                         data-id=item.id
-                                        button-change-status
-                                        class="badge bg-success"
-                                    ) Hoạt động
-                                else 
-                                    a(
-                                        href='javascript:;'                                                  
-                                        data-status=item.status
-                                        data-id = item.id
-                                        button-change-status
-                                        class="badge bg-danger"
-                                    ) Dừng hoạt động
-                            td  
-                                a(
-                                    href=`${prefixAdmin}/accounts/detail/${item.id}`
-                                    class="btn btn-secondary btn-sm"
-                                ) Chi tiết
-                                a(
-                                    href=`${prefixAdmin}/accounts/edit/${item.id}`
-                                    class="btn btn-warning btn-sm"
-                                ) Sửa
-                                button(
-                                    class="btn btn-danger btn-sm ml-1"
-                                    button-delete
-                                    data-id=item.id
-                                ) Xóa
+                                    ) Xóa
