--- a/Views/admin/pages/categories/create.pug
+++ b/Views/admin/pages/categories/create.pug
@@ -3,95 +3,96 @@ include ../../mixins/alert.pug
 include ../../mixins/selectTree.pug
 
 block main 
-    h1.mb-4 Thêm mới danh mục sản phẩm 
+    if (role.permissions.includes('categories_create'))
+        h1.mb-4 Thêm mới danh mục sản phẩm 
 
-    +alert-error(3000)
+        +alert-error(3000)
 
-    form(
-        action=`${prefixAdmin}/categories/create`
-        method='POST'
-        enctype='multipart/form-data'
-    )
-        div.form-group
-            label(for='title') Tiêu đề
-            input(
-                type='text'
-                class='form-control'
-                id='title'
-                name='title'
-                required 
-            )
-        div.form-group
-            label(for='parent_id') Danh mục cha
-            select(
-                name="parent_id"
-                id="parent_id"
-                class='form-control'
-            )
-                option(value="") -- Chọn danh mục cha --
-                if (categories) 
-                    +select-tree(categories)
-        div.form-group
-            label(for='desc') Mô tả
-            textarea(
-                class='form-control'
-                id='desc'
-                name='description'
-                rows='5'
-            )
-        div(
-            class="form-group"
-            upload-image
-            )
-            label(for="thumbnail") Ảnh
-            input(
-                type="file"
-                class="form-control-file"
-                id="thumbnail"
-                name="thumbnail"
-                accept="image/*"
-                upload-image-input
-            )
-            img(
-                src=""
-                upload-image-preview
-                class="image-preview"
-            )
-        div(class="form-group")
-            label(for="position") Vị trí
-            input(
-                type="number"
-                class="form-control"
-                id="position"
-                name="position"
-                placeholder="Tự động tăng"
-                min="1"
-            )
-        div(
-            class="form-group form-check form-check-inline"
+        form(
+            action=`${prefixAdmin}/categories/create`
+            method='POST'
+            enctype='multipart/form-data'
         )
-            input(
-                type="radio"
-                class="form-check-input"
-                id="statusActive"
-                name="status"
-                value="active"
-                checked
+            div.form-group
+                label(for='title') Tiêu đề
+                input(
+                    type='text'
+                    class='form-control'
+                    id='title'
+                    name='title'
+                    required 
+                )
+            div.form-group
+                label(for='parent_id') Danh mục cha
+                select(
+                    name="parent_id"
+                    id="parent_id"
+                    class='form-control'
+                )
+                    option(value="") -- Chọn danh mục cha --
+                    if (categories) 
+                        +select-tree(categories)
+            div.form-group
+                label(for='desc') Mô tả
+                textarea(
+                    class='form-control'
+                    id='desc'
+                    name='description'
+                    rows='5'
+                )
+            div(
+                class="form-group"
+                upload-image
+                )
+                label(for="thumbnail") Ảnh
+                input(
+                    type="file"
+                    class="form-control-file"
+                    id="thumbnail"
+                    name="thumbnail"
+                    accept="image/*"
+                    upload-image-input
+                )
+                img(
+                    src=""
+                    upload-image-preview
+                    class="image-preview"
+                )
+            div(class="form-group")
+                label(for="position") Vị trí
+                input(
+                    type="number"
+                    class="form-control"
+                    id="position"
+                    name="position"
+                    placeholder="Tự động tăng"
+                    min="1"
+                )
+            div(
+                class="form-group form-check form-check-inline"
             )
-            label(for="statusInActive" class="form-check-label") Hoạt động
-        div(
-            class="form-group form-check form-check-inline"
-        )
-            input(
-                type="radio"
-                class="form-check-input"
-                id="statusInActive"
-                name="status"
-                value="inactive"
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="statusActive"
+                    name="status"
+                    value="active"
+                    checked
+                )
+                label(for="statusInActive" class="form-check-label") Hoạt động
+            div(
+                class="form-group form-check form-check-inline"
             )
-            label(for="statusInActive" class="form-check-label") Dừng hoạt động
-        div(class="form-group")
-            button(
-                type="submit"
-                class="btn btn-primary"
-            ) Tạo mới
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="statusInActive"
+                    name="status"
+                    value="inactive"
+                )
+                label(for="statusInActive" class="form-check-label") Dừng hoạt động
+            div(class="form-group")
+                button(
+                    type="submit"
+                    class="btn btn-primary"
+                ) Tạo mới
