--- a/Views/admin/pages/products/detail.pug
+++ b/Views/admin/pages/products/detail.pug
@@ -1,43 +1,44 @@
 extends ../../layouts/default.pug
 
 block main 
+    if (role.permissions.includes('products_view'))
 
-    if (product.title) 
-        h1(class="mb-4") #{product.title}
-    
-    if (product.price) 
-        h1(class="mb-4") Giá: <b>#{product.price}$</b>
+        if (product.title) 
+            h1(class="mb-4") #{product.title}
+        
+        if (product.price) 
+            h1(class="mb-4") Giá: <b>#{product.price}$</b>
 
-    if (product.discountPercentage) 
-        h1(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%</b>
+        if (product.discountPercentage) 
+            h1(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%</b>
 
-    if (product.stock) 
-        h1(class="mb-4") Còn lại: <b>#{product.stock}
+        if (product.stock) 
+            h1(class="mb-4") Còn lại: <b>#{product.stock}
 
-    if (product.thumbnail) 
-        h1(class="mb-4") 
-            img(
-                src=product.thumbnail, 
-                style="width: 100px"
-            )
+        if (product.thumbnail) 
+            h1(class="mb-4") 
+                img(
+                    src=product.thumbnail, 
+                    style="width: 100px"
+                )
 
-    if (product.status) 
-        .mb-4 
-            span Trạng thái: 
-            if (product.status == 'active')
-                span.badge.bg-success Hoạt động
-            else 
-                span.badge.bg-danger Dừng hoạt động
-    
-    if (product.position)
-        div.mb-4 Vị trí: <b>#{product.position}</b>
+        if (product.status) 
+            .mb-4 
+                span Trạng thái: 
+                if (product.status == 'active')
+                    span.badge.bg-success Hoạt động
+                else 
+                    span.badge.bg-danger Dừng hoạt động
+        
+        if (product.position)
+            div.mb-4 Vị trí: <b>#{product.position}</b>
 
-    if (product.description) 
-        div.mb-4 #{product.description}
+        if (product.description) 
+            div.mb-4 #{product.description}
 
-    a(
-        class="btn btn-warning"
-        href=`${prefixAdmin}/products/edit/${product.id}`
-    ) Chỉnh sửa
+        a(
+            class="btn btn-warning"
+            href=`${prefixAdmin}/products/edit/${product.id}`
+        ) Chỉnh sửa
 
-    script(src="/admin/js/product.js")
+        script(src="/admin/js/product.js")
