--- a/Views/admin/pages/products/index.pug
+++ b/Views/admin/pages/products/index.pug
@@ -7,124 +7,126 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main 
-    +alert-success(3000)
+    if (role.permissions.includes('products_view'))
 
-    +alert-error(3000)
+        +alert-success(3000)
 
-    h1 Products
+        +alert-error(3000)
 
-    .card.mb-3 
-        .card-header Bộ lọc và Tìm kiếm 
-        .card-body 
-            .row
-                .col-6
-                    +filter-status(filterStatus)
-                .col-6
-                    +search-form(searchKey)
+        h1 Products
 
-    +sort()
+        .card.mb-3 
+            .card-header Bộ lọc và Tìm kiếm 
+            .card-body 
+                .row
+                    .col-6
+                        +filter-status(filterStatus)
+                    .col-6
+                        +search-form(searchKey)
 
-    .card.mb-3 
-        .card-header Danh sách sản phẩm 
-        .card-body 
-            .row 
-                .col-8 
-                    +formChangeMulti(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-                .col-4 
-                    a(
-                        href=`${prefixAdmin}/products/create`
-                        class="btn btn-outline-success"
-                    ) + Thêm mới
+        +sort()
 
-            table(
-                class="table table-hover table-sm"
-                checkbox-multi
-            )
-                thead 
-                    tr  
-                        th 
-                            input(type="checkbox" name="checkall")
-                        th STT 
-                        th Image 
-                        th Title 
-                        th Price 
-                        th Position
-                        th Status 
-                        th Action 
-                tbody 
+        .card.mb-3 
+            .card-header Danh sách sản phẩm 
+            .card-body 
+                .row 
+                    .col-8 
+                        +formChangeMulti(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+                    .col-4 
+                        a(
+                            href=`${prefixAdmin}/products/create`
+                            class="btn btn-outline-success"
+                        ) + Thêm mới
 
-                    each item, index in data
+                table(
+                    class="table table-hover table-sm"
+                    checkbox-multi
+                )
+                    thead 
                         tr  
-                            td 
-                                input(
-                                    type="checkbox"
-                                    name="id"
-                                    value=item.id
-                                )
-                            td #{index + 1}
-                            td 
-                                img(
-                                    src=item.thumbnail,
-                                    alt=`Sản phẩm ${index + 1}`,
-                                    width="100px",
-                                    height="auto"
-                                )
-                            td #{item.title} 
-                            td #{item.price}
-                            td 
-                                input(
-                                    type="number"
-                                    value=item.position 
-                                    style="width: 60px"
-                                    min="1"
-                                    name="position"
-                                )
-                            td 
-                                if (item.status == 'active')
+                            th 
+                                input(type="checkbox" name="checkall")
+                            th STT 
+                            th Image 
+                            th Title 
+                            th Price 
+                            th Position
+                            th Status 
+                            th Action 
+                    tbody 
+
+                        each item, index in data
+                            tr  
+                                td 
+                                    input(
+                                        type="checkbox"
+                                        name="id"
+                                        value=item.id
+                                    )
+                                td #{index + 1}
+                                td 
+                                    img(
+                                        src=item.thumbnail,
+                                        alt=`Sản phẩm ${index + 1}`,
+                                        width="100px",
+                                        height="auto"
+                                    )
+                                td #{item.title} 
+                                td #{item.price}
+                                td 
+                                    input(
+                                        type="number"
+                                        value=item.position 
+                                        style="width: 60px"
+                                        min="1"
+                                        name="position"
+                                    )
+                                td 
+                                    if (item.status == 'active')
+                                        a(
+                                            href='javascript:;' 
+                                            data-status=item.status
+                                            data-id=item.id
+                                            button-change-status
+                                            class="badge bg-success"
+                                        ) Hoạt động
+                                    else 
+                                        a(
+                                            href='javascript:;'                                                  
+                                            data-status=item.status
+                                            data-id = item.id
+                                            button-change-status
+                                            class="badge bg-danger"
+                                        ) Dừng hoạt động
+                                td  
                                     a(
-                                        href='javascript:;' 
-                                        data-status=item.status
+                                        href=`${prefixAdmin}/products/detail/${item.id}`
+                                        class="btn btn-secondary btn-sm"
+                                    ) Chi tiết
+                                    a(
+                                        href=`${prefixAdmin}/products/edit/${item.id}`
+                                        class="btn btn-warning btn-sm"
+                                    ) Sửa
+                                    button(
+                                        class="btn btn-danger btn-sm ml-1"
+                                        button-delete
                                         data-id=item.id
-                                        button-change-status
-                                        class="badge bg-success"
-                                    ) Hoạt động
-                                else 
-                                    a(
-                                        href='javascript:;'                                                  
-                                        data-status=item.status
-                                        data-id = item.id
-                                        button-change-status
-                                        class="badge bg-danger"
-                                    ) Dừng hoạt động
-                            td  
-                                a(
-                                    href=`${prefixAdmin}/products/detail/${item.id}`
-                                    class="btn btn-secondary btn-sm"
-                                ) Chi tiết
-                                a(
-                                    href=`${prefixAdmin}/products/edit/${item.id}`
-                                    class="btn btn-warning btn-sm"
-                                ) Sửa
-                                button(
-                                    class="btn btn-danger btn-sm ml-1"
-                                    button-delete
-                                    data-id=item.id
-                                ) Xóa
+                                    ) Xóa
 
-    +pagination(pagination)
+        +pagination(pagination)
 
-    form(
-        action="" 
-        method="POST"
-        id="form-change-status"
-        data-path=`${prefixAdmin}/products/change-status`
-    ) 
+        form(
+            action="" 
+            method="POST"
+            id="form-change-status"
+            data-path=`${prefixAdmin}/products/change-status`
+        ) 
 
-    form(
-        action=""
-        method="POST"
-        id="form-delete-item"
-        data-path=`${prefixAdmin}/products/delete`
-    )
+        form(
+            action=""
+            method="POST"
+            id="form-delete-item"
+            data-path=`${prefixAdmin}/products/delete`
+        )
 
-    script(src="/admin/js/product.js") 
+        script(src="/admin/js/product.js") 
