--- a/Views/admin/pages/roles/create.pug
+++ b/Views/admin/pages/roles/create.pug
@@ -1,31 +1,33 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1.mb-4 #{titlePage}
+    if (role.permissions.includes('roles_create'))
 
-    form(
-        action = `${prefixAdmin}/roles/create`
-        method='POST'
-    )
-        .form-group 
-            label(for='title') Tiêu đề
-            input(
-                type='text'
-                class='form-control'
-                id='title'
-                name='title'
-                required
-            )
-        .form-group 
-            label(for='title') Mô tả
-            textarea(
-                type='text'
-                class='form-control'
-                id='desc'
-                name='description'
-            )
-        div(class="form-group")
-            button(
-                type="submit"
-                class="btn btn-primary"
-            ) Tạo mới
+        h1.mb-4 #{titlePage}
+
+        form(
+            action = `${prefixAdmin}/roles/create`
+            method='POST'
+        )
+            .form-group 
+                label(for='title') Tiêu đề
+                input(
+                    type='text'
+                    class='form-control'
+                    id='title'
+                    name='title'
+                    required
+                )
+            .form-group 
+                label(for='title') Mô tả
+                textarea(
+                    type='text'
+                    class='form-control'
+                    id='desc'
+                    name='description'
+                )
+            div(class="form-group")
+                button(
+                    type="submit"
+                    class="btn btn-primary"
+                ) Tạo mới
