--- a/Views/admin/partials/sider.pug
+++ b/Views/admin/partials/sider.pug
@@ -5,13 +5,18 @@
         ul 
             li 
                 a(href=`${prefixAdmin}/dashboard`) Dashboard 
-            li 
-                a(href=`${prefixAdmin}/categories`) Categories
-            li 
-                a(href=`${prefixAdmin}/products`) Products
-            li 
-                a(href=`${prefixAdmin}/roles`) Role
-            li 
-                a(href=`${prefixAdmin}/roles/permissions`) Permissions
-            li 
-                a(href=`${prefixAdmin}/accounts`) Accounts
+            if (role.permissions.includes("categories_view"))
+                li 
+                    a(href=`${prefixAdmin}/categories`) Categories
+            if (role.permissions.includes("products_view"))
+                li 
+                    a(href=`${prefixAdmin}/products`) Products
+            if (role.permissions.includes("roles_view"))
+                li 
+                    a(href=`${prefixAdmin}/roles`) Role
+            if (role.permissions.includes("roles_view"))
+                li 
+                    a(href=`${prefixAdmin}/roles/permissions`) Permissions
+            if (role.permissions.includes("roles_view"))
+                li 
+                    a(href=`${prefixAdmin}/accounts`) Accounts
