--- a/Views/Client/Pages/Products/index.pug
+++ b/Views/Client/Pages/Products/index.pug
@@ -3,8 +3,9 @@ include ../../mixins/box-head.pug
 include ../../mixins/product-view.pug
 
 block main 
-    .container.my-3 
-        .row 
-            .col-12 
-                +box-head("Danh sách sản phẩm")
-        +productView(data)
+    - if (productsNew)
+        .container.my-3 
+            .row 
+                .col-12 
+                    +box-head(titlePage)
+            +productView(productsNew)
