feat: detail product client update

--- a/Views/admin/pages/products/create.pug
+++ b/Views/admin/pages/products/create.pug
@@ -56,7 +56,7 @@ block main
                 textarea(
                     class="form-control"
                     id="desc"
-                    name="descreiption"
+                    name="description"
                     rows="5"
                 )
             div(class="form-group")
