--- a/Views/Client/Pages/Products/detail.pug
+++ b/Views/Client/Pages/Products/detail.pug
@@ -1,38 +1,55 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
 
 block main 
-    .container.my-3 
-        .row 
-            .col-12 
-                if (product.title) 
-                    h1(class="mb-4") #{product.title}
-                
-                if (product.price) 
-                    h1(class="mb-4") Giá: <b>#{product.price}$</b>
-
-                if (product.discountPercentage) 
-                    h1(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%</b>
-
-                if (product.stock) 
-                    h1(class="mb-4") Còn lại: <b>#{product.stock}
-
-                if (product.thumbnail) 
-                    h1(class="mb-4") 
+    .product-detail 
+        .container.my-5 
+            .row 
+                .col-6 
+                    .inner-thumb 
                         img(
-                            src=product.thumbnail, 
-                            style="width: 100px"
+                            src=product.thumbnail, alt=product.title
                         )
+                .col-6 
+                    h1.inner-title(class="mb-4") #{product.title}
 
-                if (product.status) 
-                    .mb-4 
-                        span Trạng thái: 
-                        if (product.status == 'active')
-                            span.badge.bg-success Hoạt động
-                        else 
-                            span.badge.bg-danger Dừng hoạt động
-                
-                if (product.position)
-                    div.mb-4 Vị trí: <b>#{product.position}</b>
+                    if (product.category) 
+                        .inner-category 
+                            span Danh mục: 
+                            a(
+                                href=`products/${product.category.slug}`
+                            ) #{product.category.title}
 
-                if (product.description) 
-                    div.mb-4 #{product.description}
+                    if (product.priceNew) 
+                        div.inner-price-new #{product.priceNew}
+
+                    if (product.price) 
+                        div.inner-price-old #{product.price}
+
+                    if (product.discountPercentage) 
+                            div.inner-percent Giảm tới <span>#{product.discountPercentage}$</span>
+
+                    if (product.stock) 
+                        div.inner-percent Còn lại <span>#{product.stock}</span> sản phẩm
+
+                    form(
+                        action=`/cart/add/${product.id}`
+                        method="POST"
+                    )
+                        input.form-control.mb-2(
+                            type='number'
+                            name='quantity'
+                            value='1'
+                            min='1'
+                            max=product.stock
+                        )
+                        button.btn.btn-success.btn-block(
+                            type='submit'
+                        ) Thêm vào giỏ hàng 
+        hr
+
+        .container.my-5 
+            .row 
+                .col-12 
+                    +box-head("Mô tả sản phẩm")
+                    .inner-desc !{product.decription}
