--- a/Views/Client/mixins/product-view.pug
+++ b/Views/Client/mixins/product-view.pug
@@ -10,8 +10,8 @@ mixin productView(product)
                     .inner-content 
                         h3.inner-title 
                             a(
-                                href=`products/${item.slug}`
+                                href=`detail/${item.slug}`
                             ) #{item.title}
-                        .inner-price-new #{item.priceNew}$
-                        .inner-price-old #{item.price}$
-                        .inner-discount -#{item.discountPercentage}%
+                    .inner-price-new #{item.priceNew}$
+                    .inner-price-old #{item.price}$
+                    .inner-discount -#{item.discountPercentage}%
