feat: search in client

--- a/Views/Client/Pages/Products/detail.pug
+++ b/Views/Client/Pages/Products/detail.pug
@@ -17,7 +17,7 @@ block main
                         .inner-category 
                             span Danh mục: 
                             a(
-                                href=`products/${product.category.slug}`
+                                href=`/products/${product.category.slug}`
                             ) #{product.category.title}
 
                     if (product.priceNew) 
