--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,5 +180,31 @@
   border-radius: 8px;
 }
 
+[show-alert].alert-hidden {
+  animation-name: alert-hidden;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
 
+@keyframes alert-hidden {
+  from {
+      right: 15px
+  }
+  to {
+      right: -100%;
+      display: none;
+  }
+}
+
+[show-alert] [close-alert] {
+  background: #ffffffc4;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  line-height: 20px;
+  text-align: center;
+  font-weight: 600;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
