feat: update in cart

--- a/Views/Client/Pages/cart/index.pug
+++ b/Views/Client/Pages/cart/index.pug
@@ -57,3 +57,5 @@ block main
                     a.btn.btn-success(
                         href='checkout'
                     ) Thanh toán
+
+    script(src='/js/cart.js')
