feat:order products be

--- a/Views/Client/Pages/search/index.pug
+++ b/Views/Client/Pages/search/index.pug
@@ -8,4 +8,4 @@ block main
             .col-12 
                 +box-head("Kết quả tìm kiếm")
 
-        +productView(products)
+        +productView(products, 'products')
