feat: user info without html css

--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -47,5 +47,9 @@ header.header
                         else 
                             li 
                                 a(
+                                    href='/user/ifno' 
+                                ) #{user.fullName}
+                            li 
+                                a(
                                     href='/user/logout' 
                                 ) Đăng xuất
