feat: general settings for admin

--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -6,7 +6,7 @@ header.header
             .col-3 
                 .inner-logo 
                     a(href="/")
-                        img(src="/images/NgocHoaii.jpg", alt="Logo", height=200)
+                        img(src=settingsGeneral.logo, alt="Logo", height=200)
             .col-5 
                 form(
                     action='/search'
