--- a/Views/admin/partials/sider.pug
+++ b/Views/admin/partials/sider.pug
@@ -20,3 +20,5 @@
             if (role.permissions.includes("roles_view"))
                 li 
                     a(href=`${prefixAdmin}/accounts`) Accounts
+            li 
+                    a(href=`${prefixAdmin}/settings/general`) General settings
