--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -4,6 +4,8 @@ html
         title #{titlePage}
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/style.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
+        
     body 
         include ../partials/header.pug
 
@@ -13,3 +15,5 @@ html
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
         script(src="/js/script.js") 
+        script(src="/socket.io/socket.io.js") 
+        script(src="/js/chat.js") 
