--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -47,7 +47,11 @@ header.header
                         else 
                             li 
                                 a(
-                                    href='/user/ifno' 
+                                    href='/chat' 
+                                ) Chat
+                            li 
+                                a(
+                                    href='/user/info' 
                                 ) #{user.fullName}
                             li 
                                 a(
