feat: show typing

--- a/Views/Client/Pages/chat/index.pug
+++ b/Views/Client/Pages/chat/index.pug
@@ -21,6 +21,7 @@ block main
                                 .inner-outgoing 
                                     .inner-content
                                         | #{chat.content} 
+                        .inner-list-typing
                     .inner-foot 
                         form.inner-form(
                             action=``
