--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -5,6 +5,10 @@ html
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/style.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
+        link(
+            rel="stylesheet", 
+            type='text/css',
+            href="https://unpkg.com/file-upload-with-preview/dist/style.css")
         
     body 
         include ../partials/header.pug
@@ -19,3 +23,4 @@ html
         script(type='module' src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         script(src="/js/socket.js") 
         script(type='module' src="/js/chat.js") 
+        script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js") 
