--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -9,7 +9,10 @@ html
             rel="stylesheet", 
             type='text/css',
             href="https://unpkg.com/file-upload-with-preview/dist/style.css")
-        
+        link(
+            href='https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.min.js'
+        )
+
     body 
         include ../partials/header.pug
 
