feat: send friend request

--- a/Views/Client/Pages/chat/index.pug
+++ b/Views/Client/Pages/chat/index.pug
@@ -58,6 +58,7 @@ block main
     .tooltip(role='tooltip')
         emoji-picker.light
 
-
+    block script 
+        script(type='module' src="/js/chat.js") 
 
 
