--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -28,5 +28,8 @@ html
         script(src="/js/socket.js") 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.min.js") 
         script(src='https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.js')
-        script(type='module' src="/js/chat.js") 
+        //- script(type='module' src="/js/chat.js") 
+        //- script(type='module' src="/js/users.js") 
         script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js") 
+
+        block script
