--- a/Views/Client/Pages/users/not-friend.pug
+++ b/Views/Client/Pages/users/not-friend.pug
@@ -23,8 +23,10 @@ block main
                             .inner-name #{user.fullName}
                             .inner-buttons
                                 button.btn.btn-sm.btn-primary.me-1(
-                                    button-add-friend=user.id
+                                    btn-add-friend=user.id
                                 ) Kết bạn 
                                 button.btn.btn-sm.btn-secondary.me-1(
-                                    button-cancel-friend=user.id
+                                    btn-cancel-friend=user.id
                                 ) Hủy
+    block script 
+        script(type='module' src="/js/users.js") 
