feat: accept friend request

--- a/Views/Client/Pages/users/accept.pug
+++ b/Views/Client/Pages/users/accept.pug
@@ -31,6 +31,10 @@ block main
                                     btn-deleted-friend
                                     disabled
                                 ) Đã xóa
+                                button.btn.btn-sm.btn-secondary.me-1(
+                                    btn-accepted-friend
+                                    disabled
+                                ) Đã chấp nhận 
 
     block script 
         script(src="/js/users.js") 
