--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -45,10 +45,14 @@ header.header
                                     href='/user/login' 
                                 ) Đăng nhập
                         else 
+                            //- li 
+                            //-     a(
+                            //-         href='/chat' 
+                            //-     ) Chat'
                             li 
                                 a(
-                                    href='/chat' 
-                                ) Chat
+                                    href='/users/friends' 
+                                ) Bạn bè
                             li 
                                 a(
                                     href='/user/info' 
