feat: create room chat

--- a/Views/Client/partials/header.pug
+++ b/Views/Client/partials/header.pug
@@ -45,10 +45,10 @@ header.header
                                     href='/user/login' 
                                 ) Đăng nhập
                         else 
-                            //- li 
-                            //-     a(
-                            //-         href='/chat' 
-                            //-     ) Chat'
+                            li 
+                                a(
+                                    href='/rooms-chat' 
+                                ) Phòng chat
                             li 
                                 a(
                                     href='/users/friends' 
